[package]
name = "leptos-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
serde_json = { workspace = true }
web-sys = { version = "0.3", features = ["Event", "Window", "HtmlElement", "console"] }

